<resources>
    <string name="app_name">Smart Schedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_schedule">Schedule</string>
    <string name="menu_lessons">Lessons</string>
    <string name="menu_import">Import schedule</string>
    <string name="menu_export">Share schedule</string>
    <string name="menu_settings">Settings</string>

    <string name="add_lesson_to_schedule">Add Lesson</string>
    <string name="add_lesson">Add Lesson</string>

    <integer-array name="img_id_arr">
        <item>@drawable/tab_indicator_selected</item>
        <item>@drawable/tab_indicator_selected</item>
    </integer-array>

    <string-array name="lesson_types">
        <item>Lecture</item>
        <item>Seminar</item>
        <item>Lab</item>
    </string-array>

    <string-array name="max_number_of_lesson">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>


    <string-array name="week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>