<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_screen"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_schedule" />

        <item
            android:id="@+id/nav_lessons"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/menu_lessons" />

        <item
            android:id="@+id/nav_import"
            android:icon="@android:drawable/stat_sys_download"
            android:title="@string/menu_import" />
        <item
            android:id="@+id/nav_export"
            android:icon="@android:drawable/stat_sys_upload_done"
            android:title="@string/menu_export" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:iconTint="#fff"
            android:title="@string/menu_settings" />

    </group>
</menu>