<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main_screen">

    <fragment
        android:id="@+id/nav_create"
        android:name="com.missclick.smartschedule.ui.home.HomeFragment"
        android:label="@string/menu_create"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_import"
        android:name="com.missclick.smartschedule.ui.gallery.GalleryFragment"
        android:label="@string/menu_import"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_export"
        android:name="com.missclick.smartschedule.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_export"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.missclick.smartschedule.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.missclick.smartschedule.ui.schedule.ScheduleFragment"
        android:label="fragment_schedule"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/nav_main_screen"
        android:name="com.missclick.smartschedule.mainScreen.MainScreenFragment"
        android:label="main_screen_fragment"
        tools:layout="@layout/main_screen_fragment" />
</navigation>